/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java-library'
    id 'maven-publish'
}

repositories {
    mavenLocal()
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

dependencies {
    testImplementation libs.junit.junit
    testImplementation libs.org.assertj.assertj.core
    testImplementation libs.org.mockito.mockito.core
    testImplementation libs.org.powermock.powermock.module.junit4
    testImplementation libs.org.powermock.powermock.api.mockito2
}

group = 'net.lingala.zip4j'
version = '2.11.6-SNAPSHOT'
description = 'Zip4j'
java.sourceCompatibility = JavaVersion.VERSION_21

java {
    withSourcesJar()
    withJavadocJar()
}

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.withType(Javadoc).configureEach {
    options.encoding = 'UTF-8'
}
